--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -127,12 +127,12 @@
     .cart-drawer {
         width: 100%;
         max-width: 100%;
-        right: 0;
-        transform: translate3d(100%, 0, 0);
+        right: -100%;
+        transition: right 0.4s var(--ease-out);
     }
     
     .cart-drawer.open {
-        transform: translate3d(0, 0, 0);
+        right: 0;
     }
 }
 
